@@ -5155,7 +5155,7 @@ send(&quot; &quot;)</script>
                                     <script>mtw.al_sweaver(&quot;sense&quot;)</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex>^sense$</regex>
+                                    <regex>^shd$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Greater Heal</name>
@@ -5169,7 +5169,7 @@ send(&quot; &quot;)</script>
                                     <script>mtw.al_do_sweaver(&quot;shadowcall passage &quot; ..matches[2])</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex>^spass(.*)$</regex>
+                                    <regex>^wsl(.*)$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Mimic</name>
@@ -5183,7 +5183,7 @@ send(&quot; &quot;)</script>
                                     <script>mtw.atk_sweaver(&quot;disgust &quot;)</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex>^disg$</regex>
+                                    <regex>^stu$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Deceit</name>
@@ -5197,14 +5197,14 @@ send(&quot; &quot;)</script>
                                     <script>mtw.al_do_sweaver(&quot;shadowcall lance &quot; ..matches[2].. &quot; at &quot; ..mtw.target)</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex>^lnc (.*)$</regex>
+                                    <regex>^slnc (.*)$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Silentcall</name>
                                     <script>mtw.al_sweaver(&quot;night&quot;)</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex>^ngt$</regex>
+                                    <regex>^nt$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Marionette</name>
@@ -5231,14 +5231,14 @@ send(&quot; &quot;)</script>
                                         <script>mtw.al_sweaver(&quot;eclipse&quot;)</script>
                                         <command></command>
                                         <packageName></packageName>
-                                        <regex>^eclipse$</regex>
+                                        <regex>^eci$</regex>
                                     </Alias>
                                     <Alias isActive="yes" isFolder="no">
                                         <name>shadowcall dissolve</name>
                                         <script>mtw.al_sweaver(&quot;dissolve&quot;)</script>
                                         <command></command>
                                         <packageName></packageName>
-                                        <regex>^dissolve$</regex>
+                                        <regex>^dis$</regex>
                                     </Alias>
                                 </AliasGroup>
                                 <Alias isActive="yes" isFolder="no">
@@ -5253,28 +5253,28 @@ send(&quot; &quot;)</script>
                                     <script>mtw.desperate_prayer_alias(matches)</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex>^desp(.*)$</regex>
+                                    <regex>^dspt(.*)$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Scarab Curse</name>
-                                    <script></script>
+                                    <script>mtw.atk_sweaver(&quot;curse &quot;)</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex></regex>
+                                    <regex>^cus$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Storm of Shadows</name>
-                                    <script></script>
+                                    <script>mtw.atk_sweaver(&quot;storm &quot;)</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex></regex>
+                                    <regex>^sto$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Night's Horror</name>
-                                    <script></script>
+                                    <script>mtw.atk_sweaver(&quot;horrify &quot;)</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex></regex>
+                                    <regex>^hor$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Shadeskin</name>
@@ -5285,17 +5285,17 @@ send(&quot; &quot;)</script>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Oubliette</name>
-                                    <script></script>
+                                    <script>mtw.atk_sweaver(&quot;imprison &quot;)</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex></regex>
+                                    <regex>^oub$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>Torturous Whip</name>
                                     <script>mtw.atk_sweaver(&quot;lash &quot;)</script>
                                     <command></command>
                                     <packageName></packageName>
-                                    <regex>^shw$</regex>
+                                    <regex>^lsh$</regex>
                                 </Alias>
                                 <Alias isActive="yes" isFolder="no">
                                     <name>cloak</name>
@@ -5310,6 +5310,34 @@ send(&quot; &quot;)</script>
                                     <command></command>
                                     <packageName></packageName>
                                     <regex>^stl$</regex>
+                                </Alias>
+                                <Alias isActive="yes" isFolder="no">
+                                    <name>Beckon</name>
+                                    <script>mtw.atk_sweaver(&quot;beckon&quot;)</script>
+                                    <command></command>
+                                    <packageName></packageName>
+                                    <regex>^umb$</regex>
+                                </Alias>
+                                <Alias isActive="yes" isFolder="no">
+                                    <name>Projection</name>
+                                    <script>mtw.atk_sweaver(&quot;project&quot;)</script>
+                                    <command></command>
+                                    <packageName></packageName>
+                                    <regex>^jct$</regex>
+                                </Alias>
+                                <Alias isActive="yes" isFolder="no">
+                                    <name>Shade</name>
+                                    <script>mtw.al_sweaver(&quot;shade&quot;)</script>
+                                    <command></command>
+                                    <packageName></packageName>
+                                    <regex>^sd$</regex>
+                                </Alias>
+                                <Alias isActive="yes" isFolder="no">
+                                    <name>Road</name>
+                                    <script>mtw.al_sweaver(&quot;road&quot;)</script>
+                                    <command></command>
+                                    <packageName></packageName>
+                                    <regex>^road$</regex>
                                 </Alias>
                             </AliasGroup>
                             <AliasGroup isActive="yes" isFolder="yes">
